--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: go
 sudo: false
 go:
-  - 1.10
+  - "1.10"
+  - "1.11.x"
+  - tip
 
 before_install:
   - go get -u gopkg.in/alecthomas/gometalinter.v1
