--- a/etc/soar.yaml
+++ b/etc/soar.yaml
@@ -15,6 +15,7 @@ test-dsn:
 
 # 高危，仅测试时使用，线上环境禁止配置为 true
 allow-online-as-test: true
+disable-version-check: false
 column-not-allow-type:
 - json
 - text
